# pytest-culprit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  SOLUTIONS_commits_where_the_test_ca.md
pytest_culprit/: cli.py
